--- a/core-cloud-web/.env-sample
+++ b/core-cloud-web/.env-sample
@@ -3,6 +3,9 @@ NEXT_PUBLIC_TITLE=CoreCloud
 NEXT_PUBLIC_METADATA_TITLE=CoreCloud
 
 # (Optional)
+NEXT_PUBLIC_HOME_ICON_URLS=
+
+# (Optional)
 NEXT_PUBLIC_AUTHENTICATOR_ICON_URLS=
 
 NEXT_PUBLIC_API_HOST=
