--- a/core-cloud-server/.gitignore
+++ b/core-cloud-server/.gitignore
@@ -8,3 +8,6 @@ DerivedData/
 .netrc
 
 Package.resolved
+.swiftpm/xcode/xcshareddata/xcschemes/core-cloud-server.xcscheme
+.env
+core-cloud-server.sqlite
