--- a/core-cloud-web/.env-sample
+++ b/core-cloud-web/.env-sample
@@ -8,4 +8,7 @@ NEXT_PUBLIC_HOME_ICON_URLS=
 # (Optional)
 NEXT_PUBLIC_AUTHENTICATOR_ICON_URLS=
 
+# (Optional)
+NEXT_PUBLIC_DRIVE_ICON_URLS=
+
 NEXT_PUBLIC_API_HOST=
