--- a/core-cloud-web/sources/core-cloud-web/.env-sample
+++ b/core-cloud-web/sources/core-cloud-web/.env-sample
@@ -11,4 +11,7 @@ NEXT_PUBLIC_AUTHENTICATOR_ICON_URLS=
 # (Optional)
 NEXT_PUBLIC_DRIVE_ICON_URLS=
 
+# (Optional)
+NEXT_PUBLIC_MUSIC_ICON_URLS=
+
 NEXT_PUBLIC_API_HOST=
