[web] Add preliminary album section

--- a/core-cloud-web/sources/ui/package.json
+++ b/core-cloud-web/sources/ui/package.json
@@ -15,6 +15,7 @@
     "./sheet": "./src/views/sheet.tsx",
     "./spacer": "./src/views/spacer.tsx",
     "./text": "./src/views/text.tsx",
+    "./text-field": "./src/views/text-field.tsx",
     "./v-stack": "./src/views/v-stack.tsx",
     "./z-stack": "./src/views/z-stack.tsx"
   }
