--- a/core-cloud-web/sources/core-cloud-web/.env-sample
+++ b/core-cloud-web/sources/core-cloud-web/.env-sample
@@ -14,4 +14,7 @@ NEXT_PUBLIC_DRIVE_ICON_URLS=CI_REPLACE_ME_DRIVE_ICON_URLS
 # (Optional)
 NEXT_PUBLIC_MUSIC_ICON_URLS=CI_REPLACE_ME_MUSIC_ICON_URLS
 
+# (Optional)
+NEXT_PUBLIC_TV_ICON_URLS=CI_REPLACE_ME_TV_ICON_URLS
+
 NEXT_PUBLIC_API_HOST=
