--- a/.github/workflows/build-wasm.yml
+++ b/.github/workflows/build-wasm.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Create artifacts
       run: |
         mkdir result
-        mv *.wasm result/
+        mv core-cloud-wasm/*.wasm result/
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
