[ci] Update build script

--- a/.github/workflows/build-wasm.yml
+++ b/.github/workflows/build-wasm.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build release
       run: |
         cd core-cloud-wasm/Sources/CoreCloudWasm
-        emcc SHA512.c -O3 -msimd128 -o SHA512.wasm \
+        emcc Crypto_SHA512.c Base.c -O3 -msimd128 -o Crypto_SHA512.wasm \
              -s STANDALONE_WASM=1 \
              -s EXPORTED_FUNCTIONS='["_Crypto_SHA512_Init","_Crypto_SHA512_Update","_Crypto_SHA512_Finalize","_malloc","_free"]' \
              -s EXPORTED_RUNTIME_METHODS='["cwrap","getValue","setValue"]' \
