--- a/core-cloud-web-new/package.json
+++ b/core-cloud-web-new/package.json
@@ -3,15 +3,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "node src/main.ts && vite dev",
+    "build": "node src/main.ts && vite build"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "3.0.10",
     "@sveltejs/kit": "2.48.5",
     "@sveltejs/vite-plugin-svelte": "6.2.1",
     "svelte": "5.43.6",
+    "@types/node": "24.10.1",
     "typescript": "5.9.3",
     "vite": "7.2.2"
   }
