[web] Add finance entry point

--- a/core-cloud-web/sources/core-cloud-web/.env.example
+++ b/core-cloud-web/sources/core-cloud-web/.env.example
@@ -20,4 +20,7 @@ NEXT_PUBLIC_TV_ICON_URLS=CI_REPLACE_ME_TV_ICON_URLS
 # (Optional)
 NEXT_PUBLIC_PASSWORDS_ICON_URLS=CI_REPLACE_ME_PASSWORDS_ICON_URLS
 
+# (Optional)
+NEXT_PUBLIC_FINANCE_ICON_URLS=CI_REPLACE_ME_FINANCE_ICON_URLS
+
 NEXT_PUBLIC_API_HOST=
